Use modules instead of having everything under the same package
SDK support coming soon!